--- a/src/app/account/transfer-money/transfer-money.component.html
+++ b/src/app/account/transfer-money/transfer-money.component.html
@@ -1,3 +1,11 @@
+<!-- Favourites Backgoround -->
+<div
+  (click)="hideFavourites()"
+  *ngIf="showFavourites"
+  class="bg-[#0000008a] absolute h-[200rem] sm:h-[150rem] w-full z-20"
+></div>
+
+<!-- Money Transfer -->
 <div class="overflow-x-hidden">
   <div class="Money_transfer">
     <div class="background"></div>
@@ -387,6 +395,7 @@
       </svg>
     </div>
   </div>
+
   <div class="flex-col" *ngIf="currentStep === 1">
     <div class="flex justify-center pb-10 pt-10 w-full max-w-screen-sm mx-auto">
       <div class="text-center flex-1">
@@ -915,7 +924,10 @@
             class="gap-2 relative flex justify-between pb-2 w-[556px] lineUp"
           >
             <span class="text-left text-fs-p">Recipient Information</span>
-            <p class="text-right text-fs-p text-primary-500">
+            <p
+              (click)="toggleShowFavourites()"
+              class="flex items-center gap-2 text-right text-fs-p text-primary-500 cursor-pointer"
+            >
               <svg
                 width="24"
                 height="24"
@@ -931,6 +943,138 @@
               </svg>
               Favourite
             </p>
+          </div>
+
+          <!-- Favourites Box -->
+          <div
+            *ngIf="showFavourites"
+            class="p-5 rounded-md absolute shadow-lg right-14 sm:right-[22rem] top-0 w-[300px] sm:w-[475px] min-h-[306px] bg-white z-30"
+          >
+            <div
+              (click)="hideFavourites()"
+              class="flex justify-end cursor-pointer"
+            >
+              <svg
+                width="24px"
+                height="24px"
+                viewBox="0 0 64 64"
+                xmlns="http://www.w3.org/2000/svg"
+                stroke-width="3"
+                stroke="#000000"
+                fill="none"
+              >
+                <line x1="8.06" y1="8.06" x2="55.41" y2="55.94" />
+                <line x1="55.94" y1="8.06" x2="8.59" y2="55.94" />
+              </svg>
+            </div>
+
+            <p
+              class="flex items-center gap-2 text-right text-fs-p text-primary-500 cursor-pointer"
+            >
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+                style="display: inline-block"
+              >
+                <path
+                  d="M22 9.67002C21.9368 9.48711 21.822 9.32645 21.6693 9.20753C21.5167 9.0886 21.3328 9.01652 21.14 9.00002L15.45 8.17002L12.9 3.00002C12.8181 2.83095 12.6903 2.68837 12.5311 2.5886C12.3719 2.48883 12.1878 2.43591 12 2.43591C11.8121 2.43591 11.6281 2.48883 11.4689 2.5886C11.3097 2.68837 11.1819 2.83095 11.1 3.00002L8.54999 8.16002L2.85999 9.00002C2.67492 9.02633 2.50092 9.10399 2.35774 9.22418C2.21457 9.34438 2.10795 9.5023 2.04999 9.68002C1.99694 9.8537 1.99218 10.0385 2.03622 10.2147C2.08026 10.3909 2.17145 10.5517 2.29999 10.68L6.42999 14.68L5.42999 20.36C5.38962 20.5484 5.40455 20.7445 5.47298 20.9247C5.54141 21.1048 5.66043 21.2613 5.81572 21.3754C5.97101 21.4895 6.15596 21.5563 6.34832 21.5678C6.54068 21.5792 6.73225 21.5349 6.89999 21.44L12 18.77L17.1 21.44C17.2403 21.5192 17.3989 21.5605 17.56 21.56C17.7718 21.5608 17.9784 21.4942 18.15 21.37C18.3051 21.2589 18.4252 21.1057 18.4961 20.9285C18.567 20.7513 18.5857 20.5575 18.55 20.37L17.55 14.69L21.68 10.69C21.8244 10.5677 21.9311 10.4069 21.9877 10.2264C22.0444 10.0458 22.0486 9.8529 22 9.67002ZM15.85 13.67C15.7342 13.7824 15.6474 13.9212 15.5969 14.0744C15.5464 14.2276 15.5338 14.3908 15.56 14.55L16.28 18.75L12.52 16.75C12.3739 16.6777 12.213 16.6401 12.05 16.6401C11.887 16.6401 11.7261 16.6777 11.58 16.75L7.81999 18.75L8.53999 14.55C8.56623 14.3908 8.55356 14.2276 8.50306 14.0744C8.45256 13.9212 8.36574 13.7824 8.24999 13.67L5.24999 10.67L9.45999 10.06C9.62199 10.0375 9.77599 9.97556 9.90849 9.87967C10.041 9.78379 10.148 9.65686 10.22 9.51002L12 5.70002L13.88 9.52002C13.952 9.66686 14.059 9.79379 14.1915 9.88968C14.324 9.98556 14.478 10.0475 14.64 10.07L18.85 10.68L15.85 13.67Z"
+                  fill="currentColor"
+                />
+              </svg>
+              Favourites List
+            </p>
+
+            <div>
+              <div class="mt-5 bg-gray-300 p-3 flex items-center gap-5">
+                <svg
+                  width="70"
+                  height="70"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="bg-gray-500 p-3 rounded-full"
+                >
+                  <g clip-path="url(#clip0_2077_23358)">
+                    <path
+                      d="M12.67 2.21698L21.17 6.96698C21.4195 7.09155 21.6294 7.28321 21.776 7.52045C21.9226 7.75768 22.0002 8.0311 22 8.30998V9.74998C22 10.44 21.44 11 20.75 11H20V19H21C21.2652 19 21.5196 19.1053 21.7071 19.2929C21.8946 19.4804 22 19.7348 22 20C22 20.2652 21.8946 20.5196 21.7071 20.7071C21.5196 20.8946 21.2652 21 21 21H3C2.73478 21 2.48043 20.8946 2.29289 20.7071C2.10536 20.5196 2 20.2652 2 20C2 19.7348 2.10536 19.4804 2.29289 19.2929C2.48043 19.1053 2.73478 19 3 19H4V11H3.25C2.56 11 2 10.44 2 9.74998V8.30998C2 7.78798 2.27 7.30798 2.706 7.03598L11.329 2.21698C11.5373 2.11278 11.7671 2.05853 12 2.05853C12.2329 2.05853 12.4617 2.11278 12.67 2.21698ZM18 11H6V19H9V13H11V19H13V13H15V19H18V11ZM12 4.11798L4 8.61798V8.99998H20V8.61798L12 4.11798ZM12 5.99998C12.2652 5.99998 12.5196 6.10534 12.7071 6.29288C12.8946 6.48041 13 6.73477 13 6.99998C13 7.2652 12.8946 7.51955 12.7071 7.70709C12.5196 7.89462 12.2652 7.99998 12 7.99998C11.7348 7.99998 11.4804 7.89462 11.2929 7.70709C11.1054 7.51955 11 7.2652 11 6.99998C11 6.73477 11.1054 6.48041 11.2929 6.29288C11.4804 6.10534 11.7348 5.99998 12 5.99998Z"
+                      fill="#24221E"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_2077_23358">
+                      <rect width="24" height="24" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+                <div class="flex flex-col gap-3">
+                  <p class="text-gray-1600 font-semibold text-fs-p">
+                    Asmaa Dosuky
+                  </p>
+                  <p class="text-gray-1100">123456</p>
+                </div>
+              </div>
+
+              <div class="mt-5 bg-gray-300 p-3 flex items-center gap-5">
+                <svg
+                  width="70"
+                  height="70"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="bg-gray-500 p-3 rounded-full"
+                >
+                  <g clip-path="url(#clip0_2077_23358)">
+                    <path
+                      d="M12.67 2.21698L21.17 6.96698C21.4195 7.09155 21.6294 7.28321 21.776 7.52045C21.9226 7.75768 22.0002 8.0311 22 8.30998V9.74998C22 10.44 21.44 11 20.75 11H20V19H21C21.2652 19 21.5196 19.1053 21.7071 19.2929C21.8946 19.4804 22 19.7348 22 20C22 20.2652 21.8946 20.5196 21.7071 20.7071C21.5196 20.8946 21.2652 21 21 21H3C2.73478 21 2.48043 20.8946 2.29289 20.7071C2.10536 20.5196 2 20.2652 2 20C2 19.7348 2.10536 19.4804 2.29289 19.2929C2.48043 19.1053 2.73478 19 3 19H4V11H3.25C2.56 11 2 10.44 2 9.74998V8.30998C2 7.78798 2.27 7.30798 2.706 7.03598L11.329 2.21698C11.5373 2.11278 11.7671 2.05853 12 2.05853C12.2329 2.05853 12.4617 2.11278 12.67 2.21698ZM18 11H6V19H9V13H11V19H13V13H15V19H18V11ZM12 4.11798L4 8.61798V8.99998H20V8.61798L12 4.11798ZM12 5.99998C12.2652 5.99998 12.5196 6.10534 12.7071 6.29288C12.8946 6.48041 13 6.73477 13 6.99998C13 7.2652 12.8946 7.51955 12.7071 7.70709C12.5196 7.89462 12.2652 7.99998 12 7.99998C11.7348 7.99998 11.4804 7.89462 11.2929 7.70709C11.1054 7.51955 11 7.2652 11 6.99998C11 6.73477 11.1054 6.48041 11.2929 6.29288C11.4804 6.10534 11.7348 5.99998 12 5.99998Z"
+                      fill="#24221E"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_2077_23358">
+                      <rect width="24" height="24" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+                <div class="flex flex-col gap-3">
+                  <p class="text-gray-1600 font-semibold text-fs-p">
+                    Asmaa Dosuky
+                  </p>
+                  <p class="text-gray-1100">123456</p>
+                </div>
+              </div>
+
+              <div class="mt-5 bg-gray-300 p-3 flex items-center gap-5">
+                <svg
+                  width="70"
+                  height="70"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="bg-gray-500 p-3 rounded-full"
+                >
+                  <g clip-path="url(#clip0_2077_23358)">
+                    <path
+                      d="M12.67 2.21698L21.17 6.96698C21.4195 7.09155 21.6294 7.28321 21.776 7.52045C21.9226 7.75768 22.0002 8.0311 22 8.30998V9.74998C22 10.44 21.44 11 20.75 11H20V19H21C21.2652 19 21.5196 19.1053 21.7071 19.2929C21.8946 19.4804 22 19.7348 22 20C22 20.2652 21.8946 20.5196 21.7071 20.7071C21.5196 20.8946 21.2652 21 21 21H3C2.73478 21 2.48043 20.8946 2.29289 20.7071C2.10536 20.5196 2 20.2652 2 20C2 19.7348 2.10536 19.4804 2.29289 19.2929C2.48043 19.1053 2.73478 19 3 19H4V11H3.25C2.56 11 2 10.44 2 9.74998V8.30998C2 7.78798 2.27 7.30798 2.706 7.03598L11.329 2.21698C11.5373 2.11278 11.7671 2.05853 12 2.05853C12.2329 2.05853 12.4617 2.11278 12.67 2.21698ZM18 11H6V19H9V13H11V19H13V13H15V19H18V11ZM12 4.11798L4 8.61798V8.99998H20V8.61798L12 4.11798ZM12 5.99998C12.2652 5.99998 12.5196 6.10534 12.7071 6.29288C12.8946 6.48041 13 6.73477 13 6.99998C13 7.2652 12.8946 7.51955 12.7071 7.70709C12.5196 7.89462 12.2652 7.99998 12 7.99998C11.7348 7.99998 11.4804 7.89462 11.2929 7.70709C11.1054 7.51955 11 7.2652 11 6.99998C11 6.73477 11.1054 6.48041 11.2929 6.29288C11.4804 6.10534 11.7348 5.99998 12 5.99998Z"
+                      fill="#24221E"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_2077_23358">
+                      <rect width="24" height="24" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+                <div class="flex flex-col gap-3">
+                  <p class="text-gray-1600 font-semibold text-fs-p">
+                    Asmaa Dosuky
+                  </p>
+                  <p class="text-gray-1100">123456</p>
+                </div>
+              </div>
+            </div>
           </div>
 
           <div class="flex flex-col gap-2 relative pb-4">
@@ -1271,7 +1415,7 @@
       >
       <button
         class="flex justify-center space-x-4 p-4 rounded-lg text-gray-1800 text-fs-body w-full max-w-[585px] border-2 border-gray-1800"
-        (click)="goToNextStep()"
+        (click)="onClickAddFavourites()"
       >
         Add To Favourite
       </button>
